--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 <header class="header">
-  <link rel="stylesheet" href="/src/styles/header.css">
+  <link rel="stylesheet" href="./src/styles/header.css">
   <div class="header-container">
     <a class="logo-wrapper"
-      href="/index.html"
+      href="./index.html"
       tabindex="0"
       aria-label="Homepage">
       <div class="logo-container">
         <svg class="logo-icon" width="25px" height="25px">
-          <use href="/public/img/icons.svg#icon-logo-icon"></use>
+          <use href="./public/img/icons.svg#icon-logo-icon"></use>
         </svg>
       </div>
       <p class="logo-text">SmartNotes</p>
@@ -19,12 +19,12 @@
     </nav>
     <button class="get-started-bnt">Get started
       <svg class="get-started-icon">
-        <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+        <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
       </svg>
     </button>
     <button class="burger-btn">
       <svg class="burger-icon" width="32px" height="18px">
-        <use href="public/img/icons.svg#icon-burger"></use>
+        <use href="./public/img/icons.svg#icon-burger"></use>
       </svg>
     </button>
   </div>
@@ -41,14 +41,14 @@
       aria-label="Homepage">
       <div class="logo-container">
         <svg class="logo-icon" width="25px" height="25px">
-          <use href="/public/img/icons.svg#icon-logo-icon"></use>
+          <use href="./public/img/icons.svg#icon-logo-icon"></use>
         </svg>
       </div>
       <p class="logo-text">SmartNotes</p>
     </a>
     <button class="close-btn">
       <svg class="close-icon">
-        <use href="/public/img/icons.svg#icon-close-btn-icon" width="24px" height="24px"></use>
+        <use href="./public/img/icons.svg#icon-close-btn-icon" width="24px" height="24px"></use>
       </svg>
     </button>
     </div>
@@ -62,22 +62,22 @@
       <div class="mob-socials-list">
           <a class="mob-socials-item" href="https://facebook.com/">
             <svg class="mob-socials-icon">
-              <use href="/public/img/icons.svg#icon-facebook-icon" width="20px" height="20px"></use>
+              <use href="./public/img/icons.svg#icon-facebook-icon" width="20px" height="20px"></use>
             </svg>
           </a>
           <a class="mob-socials-item" href="https://linkedin.com/">
             <svg class="mob-socials-icon">
-              <use href="/public/img/icons.svg#icon-linkedin-icon" width="20px" height="20px"></use>
+              <use href="./public/img/icons.svg#icon-linkedin-icon" width="20px" height="20px"></use>
             </svg>
           </a>
           <a class="mob-socials-item" href="https://twitter.com/">
             <svg class="mob-socials-icon">
-              <use href="/public/img/icons.svg#icon-twitter-icon" width="20px" height="20px"></use>
+              <use href="./public/img/icons.svg#icon-twitter-icon" width="20px" height="20px"></use>
             </svg>
           </a>
           <a class="mob-socials-item" href="https://youtube.com/">
             <svg class="mob-socials-icon">
-              <use href="/public/img/icons.svg#icon-youtube-icon" width="20px" height="20px"></use>
+              <use href="./public/img/icons.svg#icon-youtube-icon" width="20px" height="20px"></use>
             </svg>
           </a>
       </div>
