--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <link rel="stylesheet" href="/src/styles/hero.css">
+  <link rel="stylesheet" href="./src/styles/hero.css">
     <div class="hero-wrapper">
         <div class="hero-text-wrapper">
             <h1 class="hero-title"><span class="hero-ttl-span">Intelligent</span> cloud-based <span class="hero-ttl-span">note-taking</span> and collaboration tool</h1>
