benef + film . added

--- a/src/partials/film.html
+++ b/src/partials/film.html
@@ -1,19 +1,19 @@
 <section class="film-section container">
-    <link rel="stylesheet" href="/src/styles/film.css">
+    <link rel="stylesheet" href="./src/styles/film.css">
     <div class="film-wrapper">
         <div class="film-img-wrapper">
             <picture>
                 <source
                     media="(min-width: 745px)"
-                    srcset="/public/img/video-3x.webp"
+                    srcset="./public/img/video-3x.webp"
                 />
                 <source
                     media="(max-width: 744px)"
-                    srcset="/public/img/video-2x.webp"
+                    srcset="./public/img/video-2x.webp"
                 />
                 <img
                     class="film-img"
-                    src="/public/img/video.jpg"
+                    src="./public/img/video.jpg"
                     alt="I make people's life simple"
                   />
             </picture>
