pricing + faq . added

--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,5 +1,5 @@
 <section class="faq container" id="faq">
-    <link rel="stylesheet" href="/src/styles/faq.css">
+    <link rel="stylesheet" href="./src/styles/faq.css">
     <div class="faq-wrapper">
         <div class="faq-title-wrapper">
             <h2 class="faq-title">Frequently Asked <span class="faq-title-span">Questions</span></h2>
@@ -9,37 +9,37 @@
             <li class="faq-item">
                 <h3 class="faq-question">What is SmartNotes?</h3>
                 <svg class="hero-signup-icon-one">
-                    <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                    <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                 </svg>
             </li>
             <li class="faq-item">
                 <h3 class="faq-question">How do I get started with SmartNotes?</h3>
                 <svg class="hero-signup-icon-one">
-                    <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                    <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                 </svg>
             </li>
             <li class="faq-item">
                 <h3 class="faq-question">What are the key features of SmartNotes?</h3>
                 <svg class="hero-signup-icon-one">
-                    <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                    <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                 </svg>
             </li>
             <li class="faq-item">
                 <h3 class="faq-question">How much does SmartNotes cost?</h3>
                 <svg class="hero-signup-icon-one">
-                    <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                    <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                 </svg>
             </li>
             <li class="faq-item">
                 <h3 class="faq-question">Who is SmartNotes for?</h3>
                 <svg class="hero-signup-icon-one">
-                    <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                    <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                 </svg>
             </li>
             <li class="faq-item">
                 <h3 class="faq-question">What is SmartNotes?</h3>
                 <svg class="hero-signup-icon-one">
-                    <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                    <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                 </svg>
             </li>
         </ul>
