--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -1,5 +1,5 @@
 <section class="pricing container" id="pricing">
-    <link rel="stylesheet" href="/src/styles/pricing.css">
+    <link rel="stylesheet" href="./src/styles/pricing.css">
     <div class="pricing-wrapper">
         <div class="pricing-title-wrapper">
             <h2 class="pricing-title"><span class="pricing-title-span">Pricing</span> & Plans</h2>
@@ -39,7 +39,7 @@
                     </ul>
                     <button class="pricing-start-btn-one">Start Free Trial
                         <svg class="hero-signup-icon-one">
-                            <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                            <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                         </svg>
                     </button>
                 </div>
@@ -84,7 +84,7 @@
                     </ul>
                     <button class="pricing-start-btn-two">Start Free Trial
                         <svg class="hero-signup-icon">
-                            <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                            <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                         </svg>
                     </button>
                 </div>
@@ -169,7 +169,7 @@
                     </ul>
                     <button class="pricing-start-btn-one">Contact Support
                         <svg class="hero-signup-icon-one">
-                            <use href="/public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+                            <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
                         </svg>
                     </button>
                 </div>
