signup + footer . added

--- a/src/partials/signup.html
+++ b/src/partials/signup.html
@@ -1,5 +1,5 @@
 <section class="signup-section container">
-    <link rel="stylesheet" href="/src/styles/signup.css">
+    <link rel="stylesheet" href="./src/styles/signup.css">
     <div class="signup-wrapper">
         <div class="signup-text-btn-div">
             <div class="signup-title-wrapper">
@@ -8,7 +8,7 @@
             </div>
             <button class="signup-for-free">Sign Up for Free
                 <svg class="signup-for-free-icon">
-                    <use href="/public/img/icons.svg#icon-arrow-icon" width="32px" height="32px"></use>
+                    <use href="./public/img/icons.svg#icon-arrow-icon" width="32px" height="32px"></use>
                 </svg>
             </button>
         </div>
