benefits back, no vercel

--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,5 +1,5 @@
 <section class="benefits container" id="benefits">
-    <link rel="stylesheet" href="../src/styles/benefits.css">
+    <link rel="stylesheet" href="./src/styles/benefits.css">
     <div class="benefits-wrapper">
         <div class="benef-title-wrapper">
             <h2 class="benefits-title">Discover the Power of <span class="benef-title-span">SmartNotes</span></h2>
