mobile and tablet menu done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,12 @@
 <header class="header">
-  <link rel="stylesheet" href="./src/styles/header.css">
+  <link rel="stylesheet" href="./src/styles/header.css" />
   <div class="header-container">
-    <a class="logo-wrapper"
+    <a
+      class="logo-wrapper"
       href="./index.html"
       tabindex="0"
-      aria-label="Homepage">
+      aria-label="Homepage"
+    >
       <div class="logo-container">
         <svg class="logo-icon" width="25px" height="25px">
           <use href="./public/img/icons.svg#icon-logo-icon"></use>
@@ -17,40 +19,49 @@
       <a class="menu-item" href="#pricing">Pricing</a>
       <a class="menu-item" href="#faq">FAQ</a>
     </nav>
-    <button class="get-started-bnt">Get started
+    <button class="get-started-bnt">
+      Get started
       <svg class="get-started-icon">
-        <use href="./public/img/icons.svg#icon-arrow-icon" width="24px" height="24px"></use>
+        <use
+          href="./public/img/icons.svg#icon-arrow-icon"
+          width="24px"
+          height="24px"
+        ></use>
       </svg>
     </button>
-    <button class="burger-btn">
+    <button class="burger-btn js-open-menu" aria-expanded="false">
       <svg class="burger-icon" width="32px" height="18px">
         <use href="./public/img/icons.svg#icon-burger"></use>
       </svg>
     </button>
   </div>
 
+  <!-- Mobile menu -->
 
-<!-- Mobile menu -->
-
-
-  <div class="mobile-menu">
+  <div class="mobile-menu js-menu-container">
     <div class="mob-menu-top">
-      <a class="logo-wrapper"
-      href="./index.html"
-      tabindex="0"
-      aria-label="Homepage">
-      <div class="logo-container">
-        <svg class="logo-icon" width="25px" height="25px">
-          <use href="./public/img/icons.svg#icon-logo-icon"></use>
+      <a
+        class="logo-wrapper"
+        href="./index.html"
+        tabindex="0"
+        aria-label="Homepage"
+      >
+        <div class="logo-container">
+          <svg class="logo-icon" width="25px" height="25px">
+            <use href="./public/img/icons.svg#icon-logo-icon"></use>
+          </svg>
+        </div>
+        <p class="logo-text">SmartNotes</p>
+      </a>
+      <button class="close-btn js-close-menu">
+        <svg class="close-icon">
+          <use
+            href="./public/img/icons.svg#icon-close-btn-icon"
+            width="24px"
+            height="24px"
+          ></use>
         </svg>
-      </div>
-      <p class="logo-text">SmartNotes</p>
-    </a>
-    <button class="close-btn">
-      <svg class="close-icon">
-        <use href="./public/img/icons.svg#icon-close-btn-icon" width="24px" height="24px"></use>
-      </svg>
-    </button>
+      </button>
     </div>
     <div class="mob-menu-bottom">
       <nav class="mob-menu-list">
@@ -60,28 +71,43 @@
         <a class="mob-menu-item" href="#signup">Support</a>
       </nav>
       <div class="mob-socials-list">
-          <a class="mob-socials-item" href="https://facebook.com/">
-            <svg class="mob-socials-icon">
-              <use href="./public/img/icons.svg#icon-facebook-icon" width="20px" height="20px"></use>
-            </svg>
-          </a>
-          <a class="mob-socials-item" href="https://linkedin.com/">
-            <svg class="mob-socials-icon">
-              <use href="./public/img/icons.svg#icon-linkedin-icon" width="20px" height="20px"></use>
-            </svg>
-          </a>
-          <a class="mob-socials-item" href="https://twitter.com/">
-            <svg class="mob-socials-icon">
-              <use href="./public/img/icons.svg#icon-twitter-icon" width="20px" height="20px"></use>
-            </svg>
-          </a>
-          <a class="mob-socials-item" href="https://youtube.com/">
-            <svg class="mob-socials-icon">
-              <use href="./public/img/icons.svg#icon-youtube-icon" width="20px" height="20px"></use>
-            </svg>
-          </a>
+        <a class="mob-socials-item" href="https://facebook.com/">
+          <svg class="mob-socials-icon">
+            <use
+              href="./public/img/icons.svg#icon-facebook-icon"
+              width="20px"
+              height="20px"
+            ></use>
+          </svg>
+        </a>
+        <a class="mob-socials-item" href="https://linkedin.com/">
+          <svg class="mob-socials-icon">
+            <use
+              href="./public/img/icons.svg#icon-linkedin-icon"
+              width="20px"
+              height="20px"
+            ></use>
+          </svg>
+        </a>
+        <a class="mob-socials-item" href="https://twitter.com/">
+          <svg class="mob-socials-icon">
+            <use
+              href="./public/img/icons.svg#icon-twitter-icon"
+              width="20px"
+              height="20px"
+            ></use>
+          </svg>
+        </a>
+        <a class="mob-socials-item" href="https://youtube.com/">
+          <svg class="mob-socials-icon">
+            <use
+              href="./public/img/icons.svg#icon-youtube-icon"
+              width="20px"
+              height="20px"
+            ></use>
+          </svg>
+        </a>
       </div>
     </div>
   </div>
-
 </header>
