--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -17,7 +17,7 @@
         <span class="slider"></span>
       </label>
       <p class="yearly">Yearly</p>
-      <button class="save">Save 25%</button>
+      <div class="save">Save 25%</div>
     </div>
     <ul class="pricing-list">
       <li class="pricing-item-one">
